--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Menu.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Menu.cshtml
@@ -14,7 +14,7 @@
             foreach (var item in Model.lstMenu)
             {
                 <li class=" nav-item">
-                    <a href="#"><i class="feather icon-shopping-cart"></i><span class="menu-title" data-i18n="Ecommerce">@item.MenuName</span></a>
+                    <a href="#"><i class="@item.Icon"></i><span class="menu-title" data-i18n="Ecommerce">@item.MenuName</span></a>
                     @if (item.Url == "#")
                     {
                         <ul class="menu-content">
