--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -45,7 +45,7 @@
                             </div>
                             <div class="pull-right">
                                 <div class="form-group no-margin">
-                                    <a class="theme-btn btn-style-one" href="http://moonliteagro.com/">Back To Home</a>
+                                    @*<a class="theme-btn btn-style-one" href="http://moonliteagro.com/">Back To Home</a>*@
                                     <input type="submit" id="Login" class="theme-btn btn-style-one" name="Login" value="Sign In">
 
                                 </div>
