--- a/HMGreenCityMLM/HMGreenCityMLM/WebsiteCss/css/style.css
+++ b/HMGreenCityMLM/HMGreenCityMLM/WebsiteCss/css/style.css
@@ -12305,12 +12305,12 @@ header-style-seven .nav-toggler:hover {
 
 .login-section {
     position: relative;
-    padding: 120px 0px 90px;
+    padding: 120px 0px 144px;
     background: #F0C27B;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #4B1248, #F0C27B);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4B1248, #bd7910);
+    background: linear-gradient(to right, #061161, #780206);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     /* fallback for old browsers */
     /* Chrome 10-25, Safari 5.1-6 */
