--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -524,7 +524,7 @@
                                                                         </li>
                                                                     </ul>
                                                                 </div>
-                                                                <div class="container-fluid" id="member-details" style="background-color: white">
+                                                                <div class="container-fluid" id="member-details">
 
                                                                     <div class="row">
 
@@ -552,7 +552,7 @@
                                                                                             <img src="../../images/treeicon.jpg" id="userimage" style="width: 50px; height: 50px;border:1px solid" />
                                                                                         </div>
                                                                                         <div class="form-group col-md-12 table-responsive">
-                                                                                            <table class="display nowrap table table-hover table-striped table-bordered" style="border:1px solid black">
+                                                                                            <table class="table mb-0">
                                                                                                 <tr>
                                                                                                     <td style="border-bottom: 1px solid #29166f; border-top: 1px solid #29166f;color:#29292b">Topup Amount</td>
                                                                                                     <th id="lblProductName" style="border-bottom: 1px solid #29166f; border-top: 1px solid #29166f;color:#29292b">: </th>
@@ -679,7 +679,7 @@
         $("a").popover('hide');
     });
     function openPopup(obj, item1, item2, item3, item4, item5, JoiningDate, ProductName, AllLeg1, AllLeg2, PermanentLeg1, PermanentLeg2, InactiveLeft, InactiveRight, PCountLeg1, PCountLeg2, PaidLeg1, PaidLeg2, BalanceLeft, BalanceRight, Profilepic, ActivationDate, AllBusinessLeft, AllBusinessRight, ProductRightBusiness, ProductLeftBusiness) {
-        debugger;
+        
         var loginid = 'LoginId - ' + ' ' + item2;
         var JoiningDate = 'JoiningDate - ' + ' ' + JoiningDate;
         $("#lblFk_UserId").text(item1);
@@ -845,10 +845,10 @@
     var winHeight = $(window).height();
     var winWidth = $(window).width();
     var clickOption = "";
-    debugger;
+    
     if (winWidth < 980) {
         //clickOption = "";
-        debugger;
+        
         clickOption = "";
     }
     else {
@@ -887,7 +887,7 @@
 
         function OnSuccess(response) {
 
-            debugger;
+            
             var ul = $("<ul></ul>");
             var freeBlock = "";
             var freeBlockL = "";
