correction of login and registration page

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/ConfirmRegistration.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/ConfirmRegistration.cshtml
@@ -79,7 +79,7 @@ span.border-box {
 }
 </style>
 
-
+<br/>
                 <div class="card">
                     
                     <div class="card-content">
@@ -95,7 +95,7 @@ span.border-box {
                             </div>
                             <h2 class="big-green">Congratulations !!</h2>
                             <div class="clearfix text-center">
-                                <h3>Now you are Dhara  Business Associate</h3>
+                                <h3>Now you are HM Green City Associate</h3>
 
                                 <div class="account-info clearfix">
                                     <div class="clearfix text-left">
