--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/Registration.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/Registration.cshtml
@@ -5,119 +5,121 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-sm-12">
 
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Admin
-                </a>
-            </li>
-            <li class="active">
-                Registration
-            </li>
+<br />
+<div class="app-content content">
+    <div class="content-overlay"></div>
+    <div class="header-navbar-shadow"></div>
+    <div class="content-wrapper">
+        <div class="content-header row">
+        </div>
+        <div class="content-body">
+            <!-- users edit start -->
+            <section class="users-edit">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-body">
+                            <ul class="nav nav-tabs mb-3" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                       aria-controls="account" role="tab" aria-selected="true">
+                                        <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Registration</span>
+                                    </a>
+                                </li>
 
-        </ol>
+                            </ul>
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
+                                    @using (Html.BeginForm("RegistrationAction", "Admin", FormMethod.Post, new { @id = "signupForm" }))
+                                    {
+                                    <div class="row">
+                                        <div class="col-md-6 form-group">
+                                            Sponsor Id <span style="color: red">*</span>
+                                            @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @Placeholder = "Refer By", @onchange = "getsponsordetails(this);" })
+                                            @Html.ValidationMessageFor(m => m.LoginId)
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            Sponsor Name <span style="color: red">*</span>
+                                            @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @Disabled = "true" })
 
-    </div>
-</div>
-<br/>
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Registration
+                                        </div>
 
+                                        <div class="col-md-12 form-group">
+                                            Leg <span style="color: red">*</span> &nbsp;&nbsp;
+                                            <input type="radio" value="Left" @ViewBag.LeftChecked id="left" name="Leg" />
+                                            Left &nbsp;&nbsp;
+                                            <input type="radio" value="Right" id="right" name="Leg" @ViewBag.RightChecked />
+                                            Right
+                                        </div>
 
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                @using (Html.BeginForm("RegistrationAction", "Admin", FormMethod.Post, new { @id = "signupForm" }))
-                 {
-                    <div class="row">
-                        <div class="col-md-6 form-group">
-                            Sponsor Id <span style="color: red">*</span>
-                            @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @Placeholder = "Refer By", @onchange = "getsponsordetails(this);" })
-                            @Html.ValidationMessageFor(m => m.LoginId)
-                        </div>
-                        <div class="col-md-6 form-group">
-                            Sponsor Name <span style="color: red">*</span>
-                            @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @Disabled = "true" })
+                                        <div class="col-md-6 form-group">
+                                            First Name <span style="color: red">*</span>
+                                            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @Placeholder = "First Name" })
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            Last Name
+                                            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @Placeholder = "Last Name" })
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            Email Id
+                                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @Placeholder = "Email id" })
+                                            @Html.ValidationMessageFor(m => m.Email)
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            Mobile No <span style="color: red">*</span>
+                                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control", @Placeholder = "Mobile No", @Maxlength = "10", @onkeypress = "return isNumberKey(event);" })
+                                            @Html.ValidationMessageFor(m => m.MobileNo)
+                                        </div>
 
+                                        <div class="col-md-6 form-group">
+                                            Gender
+                                            @Html.DropDownListFor(m => m.Gender, new SelectList(ViewBag.ddlgender, "Value", "Text"), new { @class = "form-control" })
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            Pan Card
+                                            @Html.TextBoxFor(m => m.PanCard, new { @class = "form-control", @Placeholder = "Pan Card", @Maxlength = "10", @onchange = "return validatepan(event);" })
+                                        </div>
+                                        <div class="col-md-12 form-group">
+                                            Address
+                                            @Html.TextAreaFor(m => m.Address, new { @class = "form-control", @Placeholder = "Address" })
+                                        </div>
+                                        <div class="col-md-4 form-group">
+                                            Pincode
+                                            @Html.TextBoxFor(m => m.PinCode, new { @class = "form-control", @Placeholder = "PinCode", @onchange = "return getstatecity();" })
+                                        </div>
+                                        <div class="col-md-4 form-group">
+                                            State
+                                            @Html.TextBoxFor(m => m.State, new { @class = "form-control", @Placeholder = "State", @Disabled = "disabled" })
+                                        </div>
+                                        <div class="col-md-4 form-group">
+                                            City
+                                            @Html.TextBoxFor(m => m.City, new { @class = "form-control", @Placeholder = "City", @Disabled = "disabled" })
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input type="button" id="Confirm" onclick="return confirmregistration();" class="btn btn-success" name="Confirm" value="Confirm">
+                                            <input type="button" id="Register" onclick="return saveregistration();" class="btn btn-success" style="display: none" name="Register" value="Register">
+                                            <input type="button" id="Edit" onclick="editregistration();" style="display: none" class="btn btn-info" name="Edit" value="Edit">
+                                            <br />
+                                            <p>Already have account ? <a href="/Home/Login" style="color:aquamarine">Sign In</a></p>
+                                        </div>
+                                        <br />
+                                        <p style="color: red">@TempData["Registration"] </p>
+                                    </div>
+                                    }
+                                    
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="col-md-12 form-group">
-                            Leg <span style="color: red">*</span> &nbsp;&nbsp;
-                            <input type="radio" value="Left" @ViewBag.LeftChecked id="left" name="Leg" />
-                            Left &nbsp;&nbsp;
-                            <input type="radio" value="Right" id="right" name="Leg" @ViewBag.RightChecked />
-                            Right
-                        </div>
-
-                        <div class="col-md-6 form-group">
-                            First Name <span style="color: red">*</span>
-                            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @Placeholder = "First Name" })
-                        </div>
-                        <div class="col-md-6 form-group">
-                            Last Name
-                            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @Placeholder = "Last Name" })
-                        </div>
-                        <div class="col-md-6 form-group">
-                            Email Id
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @Placeholder = "Email id" })
-                            @Html.ValidationMessageFor(m => m.Email)
-                        </div>
-                        <div class="col-md-6 form-group">
-                            Mobile No <span style="color: red">*</span>
-                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control", @Placeholder = "Mobile No", @Maxlength = "10", @onkeypress = "return isNumberKey(event);" })
-                            @Html.ValidationMessageFor(m => m.MobileNo)
-                        </div>
-
-                        <div class="col-md-6 form-group">
-                            Gender
-                            @Html.DropDownListFor(m => m.Gender, new SelectList(ViewBag.ddlgender, "Value", "Text"), new { @class = "form-control" })
-                        </div>
-                        <div class="col-md-6 form-group">
-                            Pan Card
-                            @Html.TextBoxFor(m => m.PanCard, new { @class = "form-control", @Placeholder = "Pan Card", @Maxlength = "10", @onchange = "return validatepan(event);" })
-                        </div>
-                        <div class="col-md-12 form-group">
-                            Address
-                            @Html.TextAreaFor(m => m.Address, new { @class = "form-control", @Placeholder = "Address" })
-                        </div>
-                        <div class="col-md-4 form-group">
-                            Pincode
-                            @Html.TextBoxFor(m => m.PinCode, new { @class = "form-control", @Placeholder = "PinCode", @onchange = "return getstatecity();" })
-                        </div>
-                        <div class="col-md-4 form-group">
-                            State
-                            @Html.TextBoxFor(m => m.State, new { @class = "form-control", @Placeholder = "State", @Disabled = "disabled" })
-                        </div>
-                        <div class="col-md-4 form-group">
-                            City
-                            @Html.TextBoxFor(m => m.City, new { @class = "form-control", @Placeholder = "City", @Disabled = "disabled" })
-                        </div>
-                        <div class="col-md-6 form-group">
-                            <input type="button" id="Confirm" onclick="return confirmregistration();" class="btn btn-success" name="Confirm" value="Confirm">
-                            <input type="button" id="Register" onclick="return saveregistration();" class="btn btn-success" style="display: none" name="Register" value="Register">
-                            <input type="button" id="Edit" onclick="editregistration();" style="display: none" class="btn btn-info" name="Edit" value="Edit">
-                            <br />
-                            <p>Already have account ? <a href="/Home/Login">Sign In</a></p>
-                        </div>
-                        <br />
-                        <p style="color: red">@TempData["Registration"] </p>
                     </div>
-                }
+                </div>
 
-            </div>
+            </section>
         </div>
     </div>
 </div>
-
-<script src="../../js/jquery-1.11.3.min.js"></script>
+ <script src="../../WebsiteCss/js/jquery.js"></script>
+<link href="../../AssociatePanelcss/assets/css/style.css" rel="stylesheet" />
 <script>
     $(document).ready(function () {
         $("#divload").css({ 'display': 'none' });
