--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/ConfirmRegistration.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/ConfirmRegistration.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HMGreenCityMLM.Models.Home
 @{
-    Layout = "~/Views/Shared/_WebisteLayout.cshtml";
+    Layout = null ;
 }
 
 <br/>
@@ -17,7 +17,7 @@
                     <img src="~/images/XwHw.gif" style="height:150px" />
                     <h3>Dear, @Session["DisplayName"]</h3>
                     <p style="font-size:20px;color:#5C5C5C;text-align:center">
-                        Thank you for your registration. Now you are Dhara Business Associate.Your Details are as Below:
+                        Thank you for your registration. Now you are HM Green City Associate.Your Details are as Below:
                         <br />
                         <span class="border-box">Login ID: @Session["LoginId"]</span>
                         <span class="border-box">Password:  @Session["Password"]</span>
