ADD formtype in UserPermission Report

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/UserPermission.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/UserPermission.cshtml
@@ -61,6 +61,7 @@
                                                     <thead>
                                                         <tr>
                                                             <th>Sr No.</th>
+                                                            <th>Form Type</th>
                                                             <th>Form</th>
                                                         </tr>
                                                     </thead>
@@ -75,6 +76,11 @@
 
                                                                     <tr>
                                                                         <td>@i</td>
+                                                                        <td>
+                                                                            @item.FormType
+
+                                                                        </td>
+
                                                                         <td>
                                                                             @item.FormName
 
