--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
@@ -130,20 +130,20 @@
                                                                             <td>@Item.Mobile</td>
                                                                             <td>@Item.Email</td>
                                                                             <td>
-                                                                                <a href="/AdminProfile/UpdateAssociateProfile?LoginID=@Item.LoginId" class="btn btn-info">
+                                                                                <a href="/AdminProfile/UpdateAssociateProfile?LoginID=@Item.LoginId" class="btn btn-info btn-sm">
                                                                                     Edit
                                                                                 </a>
                                                                             </td>
                                                                             <td>
                                                                                 @if (Item.isBlocked == "False")
                                                                                 {
-                                                                                    <a href="/AdminProfile/BlockAssociate?LoginID=@Item.LoginId" class="btn btn-danger">
+                                                                                    <a href="/AdminProfile/BlockAssociate?LoginID=@Item.LoginId" class="btn btn-danger btn-sm">
                                                                                         Block
                                                                                     </a>
                                                                                 }
                                                                                 else
                                                                                 {
-                                                                                    <a href="/AdminProfile/UnblockAssociate?LoginID=@Item.LoginId" class="btn btn-success">
+                                                                                    <a href="/AdminProfile/UnblockAssociate?LoginID=@Item.LoginId" class="btn btn-success btn-sm">
                                                                                         Unblock
                                                                                     </a>
                                                                                 }
@@ -151,19 +151,19 @@
                                                                             <td>
                                                                                 @if (Item.Status == "Inactive")
                                                                                 {
-                                                                                    <a href="/AdminProfile/ActivateUser?FK_UserID=@Item.Fk_UserId" class="btn btn-success" onclick="return confirm('Sure you want to activate this User ?')">
+                                                                                    <a href="/AdminProfile/ActivateUser?FK_UserID=@Item.Fk_UserId" class="btn btn-success btn-sm" onclick="return confirm('Sure you want to activate this User ?')">
                                                                                         Activate
                                                                                     </a>
                                                                                 }
                                                                                 else
                                                                                 {
-                                                                                    <a href="/AdminProfile/DeactivateUser?lid=@Item.LoginId" class="btn btn-danger" onclick="return confirm('Sure you want to deactivate this User ?')">
+                                                                                    <a href="/AdminProfile/DeactivateUser?lid=@Item.LoginId" class="btn btn-danger btn-sm" onclick="return confirm('Sure you want to deactivate this User ?')">
                                                                                         Deactivate
                                                                                     </a>
                                                                                 }
                                                                             </td>
                                                                             <td>
-                                                                                <a href="/AdminProfile/WelcomeLetter?LoginID=@Item.LoginId" class="btn btn-info">
+                                                                                <a href="/AdminProfile/WelcomeLetter?LoginID=@Item.LoginId" class="btn btn-info btn-sm">
                                                                                     Print
                                                                                 </a>
                                                                             </td>
