--- a/HMGreenCityMLM/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeDetails.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeDetails.cshtml
@@ -39,7 +39,9 @@
                                                         <tr>
                                                             <th>Sr No.</th>
                                                             <th>Name</th>
+                                                          
                                                             <th> Login Id</th>
+                                                            <th>Password</th>
                                                             <th>Qualififcation</th>
                                                             <th>Contact No</th>
                                                             <th>Email Id</th>
@@ -59,7 +61,9 @@
                                                                     <tr>
                                                                         <td>@i</td>
                                                                         <td>@Html.DisplayFor(m => item.Name)</td>
+                                                                       
                                                                         <td>@Html.DisplayFor(m => item.LoginId)</td>
+                                                                        <td>@Html.DisplayFor(m => item.Password)</td>
                                                                         <td>@Html.DisplayFor(m => item.EducationQualififcation)</td>
 
                                                                         <td>@Html.DisplayFor(m => item.Mobile)</td>
