--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Master/ProductList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Master/ProductList.cshtml
@@ -41,12 +41,10 @@
                                                             <th>S No.</th>
                                                             <th>Product Name</th>
                                                             <th>Product Price</th>
-                                                            <th>IGST</th>
-                                                            <th>CGST</th>
-                                                            <th>SGST</th>
+                                                           
                                                             <th>Binary Percent</th>
-
-                                                            <th>BV</th>
+                                                            <th>Dircet Percent</th>
+                                                           
                                                             <th>Action</th>
                                                         </tr>
                                                     </thead>
@@ -62,11 +60,9 @@
                                                                         <td>@i</td>
                                                                         <td>@Item.ProductName</td>
                                                                         <td>@Item.ProductPrice</td>
-                                                                        <td>@Item.IGST</td>
-                                                                        <td>@Item.CGST</td>
-                                                                        <td>@Item.SGST</td>
+                                                                      
                                                                         <td>@Item.BinaryPercent</td>
-                                                                        <td>@Item.BV</td>
+                                                                        <td>@Item.DirectPercent</td>
 
                                                                         <td>
                                                                             <a href="/Master/ProductMaster?productID=@Item.ProductID" class="btn btn-info btn-sm">Edit</a>
