--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Master/ProductMaster.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Master/ProductMaster.cshtml
@@ -8,9 +8,7 @@
 <!-- /.row -->
 @using (Html.BeginForm("ProductMaster", "Master", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <span style="color: red">
-        @TempData["Product"]
-    </span>
+   
     <div class="app-content content">
         <div class="content-overlay"></div>
         <div class="header-navbar-shadow"></div>
@@ -35,7 +33,7 @@
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
                                         <div class="row">
-                                            <div class="col-md-4">
+                                            <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Product Name <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
@@ -44,7 +42,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-md-4">
+                                            <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Product Price <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
@@ -52,34 +50,12 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">IGST <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.IGST, new { @class = "form-control", @onkeypress = "return isNumberKey(event)" })
-                                                    </div>
-                                                </div>
-                                            </div>
+                                           
                                            
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">CGST <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.CGST, new { @class = "form-control", @onkeypress = "return isNumberKey(event)" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">SGST <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.SGST, new { @class = "form-control", @onkeypress = "return isNumberKey(event)" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
+                                          
+                                            <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Binary Perc(%)<span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
@@ -88,10 +64,7 @@
                                                 </div>
                                             </div>
                                             
-
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-4">
+                                            <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Direct Perc(%) <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
@@ -99,28 +72,15 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">ROI Per(%) <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.ROIPercent, new { @class = "form-control", @onkeypress = "return isNumberKey(event)" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">BV <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.BV, new { @class = "form-control", @onkeypress = "return isNumberKey(event)" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                           
+
                                         </div>
+                                        
                                         <div class="row">
                                             <div class="col-md-6">
-
-                                                @if (Model == null)
+                                                <span style="color: red">
+                                                    @TempData["Product"]
+                                                </span>
+                                                @if (Model.ProductID == null)
                                                 {
                                                     <input type="submit" id="btnSaveProduct" class="btn btn-success" name="btnSaveProduct" value="Save" onclick="return saveProduct();" />
                                                 }
@@ -173,21 +133,7 @@
                                     $('#ProductPrice').focus();
                                     return false;
                                 }
-                                if ($('#IGST').val() == '') {
-                                    $("#IGST").addClass('errortext');
-                                    $('#IGST').focus();
-                                    return false;
-                                }
-                                if ($('#CGST').val() == '') {
-                                    $("#CGST").addClass('errortext');
-                                    $('#CGST').focus();
-                                    return false;
-                                }
-                                if ($('#SGST').val() == '') {
-                                    $("#SGST").addClass('errortext');
-                                    $('#SGST').focus();
-                                    return false;
-                                }
+                              
                                 if ($('#BinaryPercent').val() == '') {
                                     $("#BinaryPercent").addClass('errortext');
                                     $('#BinaryPercent').focus();
@@ -198,13 +144,7 @@
                                     $('#DirectPercent').focus();
                                     return false;
                                 }
-                                if ($('#ROIPercent').val() == '') {
-                                    $("#ROIPercent").addClass('errortext');
-                                    $('#ROIPercent').focus();
-                                    return false;
-                                }
-
-
+                               
                             }
                             function isNumberKey(evt) {
 
@@ -215,27 +155,7 @@
 
                                 return true;
                             }
-                            function getMemberDetails(obj) {
-
-                                $.ajax({
-                                    url: '/Transactions/GetMemberDetails',
-                                    type: 'GET',
-                                    dataType: 'JSON',
-                                    data: { 'LoginID': $(obj).val() },
-                                    success: function (response) {
-                                        if (response.Result == "Yes") {
-
-                                            $('#txtMemberName').val(response.DisplayName);
-                                        }
-                                        else {
-
-                                            $('#txtLoginID').val('');
-                                            $('#txtMemberName').val('');
-                                            alert(response.Result);
-                                        }
-                                    }
-                                })
-                            }
+                          
 
                             function saveProduct() {
                                 $(".errortext").removeClass("errortext");
@@ -249,21 +169,7 @@
                                     $('#ProductPrice').focus();
                                     return false;
                                 }
-                                if ($('#IGST').val() == '') {
-                                    $("#IGST").addClass('errortext');
-                                    $('#IGST').focus();
-                                    return false;
-                                }
-                                if ($('#CGST').val() == '') {
-                                    $("#CGST").addClass('errortext');
-                                    $('#CGST').focus();
-                                    return false;
-                                }
-                                if ($('#SGST').val() == '') {
-                                    $("#SGST").addClass('errortext');
-                                    $('#SGST').focus();
-                                    return false;
-                                }
+                               
                                 if ($('#BinaryPercent').val() == '') {
                                     $("#BinaryPercent").addClass('errortext');
                                     $('#BinaryPercent').focus();
@@ -274,22 +180,13 @@
                                     $('#DirectPercent').focus();
                                     return false;
                                 }
-                                if ($('#ROIPercent').val() == '') {
-                                    $("#ROIPercent").addClass('errortext');
-                                    $('#ROIPercent').focus();
-                                    return false;
-                                }
-                                if ($('#BV').val() == '') {
-                                    $("#BV").addClass('errortext');
-                                    $('#BV').focus();
-                                    return false;
-                                }
+                               
 
                                 $.ajax({
                                     url: "/Master/SaveProduct",
                                     Type: "Get",
                                     DataType: "JSON",
-                                    data: { ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), IGST: $("#IGST").val(), CGST: $("#CGST").val(), SGST: $("#SGST").val(), BinaryPercent: $("#BinaryPercent").val(), DirectPercent: $("#DirectPercent").val(), ROIPercent: $("#ROIPercent").val(), BV: $("#BV").val() },
+                                    data: { ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), IGST: "0", CGST: "0", SGST: "0", BinaryPercent: $("#BinaryPercent").val(), DirectPercent: $("#DirectPercent").val(), ROIPercent: "0", BV: "0" },
                                     success: function (data) {
                                         alert(data.Result);
                                         window.location.href = '@Url.Action("ProductList", "Master")';
@@ -351,7 +248,7 @@
                                     url: "/Master/UpdateProduct",
                                     Type: "Get",
                                     DataType: "JSON",
-                                    data: { ProductID: $("#ProductID").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), IGST: $("#IGST").val(), CGST: $("#CGST").val(), SGST: $("#SGST").val(), BinaryPercent: $("#BinaryPercent").val(), DirectPercent: $("#DirectPercent").val(), ROIPercent: $("#ROIPercent").val(), BV: $("#BV").val() },
+                                    data: { ProductID: $("#ProductID").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), IGST: "0", CGST: "0", SGST: "0", BinaryPercent: $("#BinaryPercent").val(), DirectPercent: $("#DirectPercent").val(), ROIPercent: "0", BV: "0" },
                                     success: function (data) {
                                         alert(data.Result);
                                         window.location.href = '@Url.Action("ProductList", "Master")';
