--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -133,10 +133,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="alert alert-info">
-                        <p>http://demo.afluex.com/Home/Registration?Pid=@Session["LoginId"]&lg=Left </p>
+                        <p>http://admin.hmgreencity.com/Home/Registration?Pid=@Session["LoginId"]&lg=Left </p>
                     </div>
                     <div class="alert alert-info">
-                        <p>http://demo.afluex.com/Home/Registration?Pid=@Session["LoginId"]&lg=Right </p>
+                        <p>http://admin.hmgreencity.com/Home/Registration?Pid=@Session["LoginId"]&lg=Right </p>
                     </div>
                 </div>
 
@@ -233,9 +233,44 @@
                 </div>
                 
             </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="card-title">Current Month Business Details</h4>
+                        </div>
+                        <div class="card-content">
 
-            
-        </section>
+                            <div class="table-responsive">
+                                <table class="table mb-0" id="example23">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                           
+                                            <th>Direct Business</th>
+                                            <th>Team Business</th>
+                                           
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="text-left">
+                                          
+                                            <td>@ViewBag.DirectBusiness</td>
+                                            <td>@ViewBag.TeamBusiness</td>
+                                            
+
+
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+
+</section>
         <!-- Dashboard Analytics end -->
     </div>
 </div>
